--- a/style.css
+++ b/style.css
@@ -19,6 +19,11 @@ main{
   justify-content: center;
 }
 
+/* hyperlinks have a weird color, so we deactivate the weird color here */
+a, a:visited, a:hover, a:active {
+  color: inherit;
+}
+
 .glass {
   min-height: 80vh;
   width: 60%;
@@ -27,61 +32,75 @@ main{
     rgba(255,255,255, 0.6), 
     rgba(255,255,255,0.2)
   );
+  backdrop-filter: blur(2rem);
   border-radius: 2rem;
   z-index: 2;
-  backdrop-filter: blur(2rem);
   display: flex;
 }
 
-.dashboard {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-evenly;
-  text-align: center;
+.solid {
   background: linear-gradient(
     to right bottom, 
     rgba(255,255,255, 0.5), 
     rgba(255,255,255, 0.3)
   );
   border-radius: 2rem;
-}
-
-.user {
   color: #426696;
 }
-.user h3 {
-  font-weight: normal;
-}
 
-a, a:visited, a:hover, a:active {
+.dashboard {
+  flex: 1;
+
+  /* align content inside the dashboard */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  text-align: center;
+}
+.links {
+  flex: 0.5;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+.profile {
   color: inherit;
 }
-
-.link {
-  color: #426696;
+.profile h3 {
+  font-weight: normal;
 }
-
 .avatar {
   width: 9.6rem;
   border-style: solid;
   border-radius: 50%;
 }
 
-.info {
+.content {
+  /* place after the dashboard */
   flex: 2;
-  /* Set the sections to scroll smoothly to each other */
-  scroll-behavior: smooth;
-  overflow-y: hidden;
+
+  display: grid;
+  grid-auto-flow: column;
+  /* set to count of rows, all set to 100% of content size */
+  grid-template-rows: repeat(3, 100%);
+  grid-template-columns: repeat(2, 100%);
+
   
+
+  /* set content to auto hide when overflowing. add nice scroll effect! */
+  overflow: hidden;
+  scroll-behavior: smooth;
+}
+.page {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.scrollable {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  /* scroll-snap-align: start; */
+#about-2 {
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
 }
+
