--- a/style.css
+++ b/style.css
@@ -11,8 +11,9 @@ html {
 main {
   font-family: "Poppins", sans-serif;
   min-height: 100vh;
-  background: url(./images/blob-scene-haikei.svg) no-repeat center;
+  background: url(./images/blue-haikei.svg) no-repeat center;
   background-size: cover;
+
   display: flex;
   align-items: center;
   justify-content: center;
@@ -31,10 +32,11 @@ a:active {
   width: 70%;
   background: linear-gradient(
     to right bottom,
-    rgba(255, 255, 255, 0.6),
+    rgba(255, 255, 255, 0.7),
     rgba(255, 255, 255, 0.2)
   );
   backdrop-filter: blur(2rem);
+
   border-radius: 2rem;
   z-index: 2;
   display: flex;
@@ -43,11 +45,15 @@ a:active {
 .solid {
   background: linear-gradient(
     to right bottom,
-    rgba(255, 255, 255, 0.5),
-    rgba(255, 255, 255, 0.3)
+    rgba(255, 255, 255, 0.4),
+    rgba(255, 255, 255, 0.8)
   );
   border-radius: 2rem;
-  color: #426696;
+  color: #002b40;
+}
+
+.page-element {
+  padding: 2rem;
 }
 
 .dashboard {
@@ -84,8 +90,9 @@ a:active {
 
   display: grid;
   grid-auto-flow: column;
-  /* set to count of rows, all set to 100% of content size */
+  /* count of rows is the amount of different main pages */
   grid-template-rows: repeat(3, 100%);
+  /* count of columns is the max page count for all rows */
   grid-template-columns: repeat(2, 100%);
 
   /* set content to auto hide when overflowing. add nice scroll effect! */
@@ -93,6 +100,7 @@ a:active {
   scroll-behavior: smooth;
 }
 .page {
+  /* Set up page style */
   height: 100%;
   display: flex;
   align-items: center;
@@ -100,6 +108,20 @@ a:active {
   /* all children should now move relative to their respective page */
   position: relative;
 }
+.page,
+.page:target ~ #page-1 {
+  /* set default to be hidden, so when pages are selected they fade in */
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0ms linear 300ms, opacity 300ms;
+}
+#page-1,
+.page:target {
+  /* unhide selected page*/
+  visibility: visible;
+  opacity: 1;
+}
+
 .page > footer {
   /* position in corner and center page number */
   position: absolute;
@@ -109,8 +131,8 @@ a:active {
   align-items: center;
   justify-content: center;
   /* set up size of page number */
-  width: 3rem;
-  height: 3rem;
+  width: 2rem;
+  height: 2rem;
   border-radius: 50%;
 }
 
@@ -120,31 +142,28 @@ a:active {
   text-decoration: none;
   /* font settings */
   font-family: inherit;
-  font-size: 16px;
-  /* background: linear-gradient(
-    to right bottom,
-    rgba(60, 174, 250, 0.6),
-    rgba(60, 175, 250, 0.2)
-  ); */
-  background: radial-gradient(
+  font-size: 1.6rem;
+  background: #00b092;
+  /*background: radial-gradient(
     circle,
     rgba(238, 174, 202, 0.7) 0%,
     rgba(148, 187, 233, 0.3) 100%
-  );
+  ); */
   color: black;
-  min-width: 80px;
-  padding: 8px 10px;
+  min-width: 8rem;
+  padding: 0.8rem 1rem;
 }
+/* link -> visited -> hover -> active */
 .nav-link:hover {
   filter: brightness(70%);
 }
 .nav-link:focus {
   outline: none;
-  box-shadow: 0 0 0 4px #ced7eb;
+  box-shadow: 0 0 0 0.5rem #ced7eb;
 }
 
 /* we specifically want the next buttons to be on the right,
-   and the previous buttons on the left relative to their page */
+   and the previous buttons on the left relative to their page content*/
 .page > .nav-link.next {
   position: absolute;
   right: 5%;
@@ -160,5 +179,5 @@ a:active {
 }
 
 .page iframe {
-  padding: 10px;
+  padding: 1rem;
 }
