--- a/style.css
+++ b/style.css
@@ -5,11 +5,14 @@
 }
 
 html {
+  /* Set up the main font for entire page */
   font-size: 62.5%;
+  font-family: "Poppins", sans-serif;
+
+  color: #002b40;
 }
 
 main {
-  font-family: "Poppins", sans-serif;
   min-height: 100vh;
   background: url(./images/blue-haikei.svg) no-repeat center;
   background-size: cover;
@@ -19,17 +22,26 @@ main {
   justify-content: center;
 }
 
-/* anchors can have weird color, so we deactivate the weird color here */
-/* a,
-a:visited,
-a:hover,
-a:active {
-  color: inherit;
-} */
+h1 {
+  font-size: 3.5rem;
+}
+h2 {
+  font-size: 3rem;
+  font-weight: 500;
+}
+h3 {
+  font-size: 2.5rem;
+  font-weight: 400;
+}
+h4,
+p {
+  font-size: 2rem;
+  font-weight: lighter;
+}
 
 .glass {
   min-height: 80vh;
-  width: 70%;
+  width: 80%;
   background: linear-gradient(
     to right bottom,
     rgba(255, 255, 255, 0.7),
@@ -42,23 +54,15 @@ a:active {
   display: flex;
 }
 
-.solid {
+/* Beginning of Dashboard Section */
+.dashboard {
   background: linear-gradient(
     to right bottom,
     rgba(255, 255, 255, 0.4),
     rgba(255, 255, 255, 0.8)
   );
   border-radius: 2rem;
-  color: #002b40;
-}
-
-.page-element {
-  padding: 2rem;
-}
-
-.dashboard {
   flex: 1;
-
   /* align content inside the dashboard */
   display: flex;
   flex-direction: column;
@@ -66,24 +70,42 @@ a:active {
   justify-content: space-evenly;
   text-align: center;
 }
-.profile > .avatar {
-  width: 9.6rem;
-  border-style: solid;
-  border-radius: 50%;
-}
+
 .profile {
+  margin: 0 2rem;
   color: inherit;
 }
-.profile h3 {
-  font-weight: normal;
+.profile > .avatar {
+  width: 10rem;
+  border-style: solid dashed solid dashed;
+  border-radius: 50%;
 }
+
+.line-break {
+  border: 0;
+  height: 2px;
+  width: 70%;
+  margin: 0 auto;
+  background-image: linear-gradient(to right, #002b4000, #002b40ff, #002b4000);
+}
+.line-break-left {
+  border: 0;
+  height: 2px;
+  width: 100%;
+  margin-bottom: 2rem;
+  background-image: linear-gradient(to right, #002b40ff, #002b4028, #002b4000);
+}
+
 .links {
   flex: 0.5;
   display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: space-around;
 }
+/* End of Dashboard Section */
 
+/* Beginning of Content Section */
 .content {
   /* place after the dashboard */
   flex: 2;
@@ -99,6 +121,7 @@ a:active {
   overflow: hidden;
   scroll-behavior: smooth;
 }
+
 .page {
   /* Set up page style */
   height: 100%;
@@ -108,31 +131,48 @@ a:active {
   /* all children should now move relative to their respective page */
   position: relative;
 }
-.page,
-.page:target ~ #page-1 {
+
+/* Target the immediate decendant of a page 
+   we want all page elements to show the white bg,
+   so we set that up here */
+.page > * {
+  background: linear-gradient(
+    to right bottom,
+    rgba(255, 255, 255, 0.4),
+    rgba(255, 255, 255, 0.8)
+  );
+  border-radius: 2rem;
+  color: #002b40;
+  margin: 2rem;
+  padding: 2rem;
+  font-weight: 400;
+  font-size: 1.5rem;
+}
+.page {
   /* set default to be hidden, so when pages are selected they fade in */
   visibility: hidden;
   opacity: 0;
-  transition: visibility 0ms linear 300ms, opacity 300ms;
+  transition: visibility 0ms, cubic-bezier(0.04, 0.69, 0.99, 0.65) 300ms,
+    opacity 300ms;
 }
-#page-1,
 .page:target {
   /* unhide selected page*/
   visibility: visible;
   opacity: 1;
 }
 
-.page > footer {
-  /* position in corner and center page number */
+.page footer {
+  /* position self in the corner of the parent page,
+     parent uses relative position to get this right */
   position: absolute;
-  bottom: 5%;
-  right: 5%;
+  bottom: 0%;
+  right: 0%;
   display: flex;
   align-items: center;
   justify-content: center;
-  /* set up size of page number */
-  width: 2rem;
-  height: 2rem;
+  /* manually set the page number to  */
+  width: 5rem;
+  height: 5rem;
   border-radius: 50%;
 }
 
@@ -142,13 +182,9 @@ a:active {
   text-decoration: none;
   /* font settings */
   font-family: inherit;
-  font-size: 1.6rem;
+  font-size: 1.75rem;
+  font-weight: 400;
   background: #00b092;
-  /*background: radial-gradient(
-    circle,
-    rgba(238, 174, 202, 0.7) 0%,
-    rgba(148, 187, 233, 0.3) 100%
-  ); */
   color: black;
   min-width: 8rem;
   padding: 0.8rem 1rem;
@@ -161,23 +197,20 @@ a:active {
   outline: none;
   box-shadow: 0 0 0 0.5rem #ced7eb;
 }
-
 /* we specifically want the next buttons to be on the right,
    and the previous buttons on the left relative to their page content*/
-.page > .nav-link.next {
+.nav-link.next {
   position: absolute;
-  right: 5%;
+  right: 0%;
 }
-.page > .nav-link.prev {
+.nav-link.prev {
   position: absolute;
-  left: 5%;
+  left: 0%;
 }
 
+/* we need to set the pages individually since they aren't
+   laid out linearly  */
 #about-2 {
   grid-column: 2 / 3;
   grid-row: 2 / 3;
-}
-
-.page iframe {
-  padding: 1rem;
 }
