--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ html {
   font-size: 48px;
 }
 .material-icons-round {
+  /* icons by default don't line up in the middle... weird feature */
   vertical-align: middle;
 }
 
@@ -67,7 +68,7 @@ p {
     rgba(255, 255, 255, 0.7),
     rgba(255, 255, 255, 0.2)
   );
-  backdrop-filter: blur(2rem);
+  backdrop-filter: blur(2.5rem);
 
   border-radius: 2rem;
   z-index: 2;
@@ -86,7 +87,7 @@ p {
   /* width can grow and shrink but only within this range */
   max-width: 40rem;
   min-width: 28.5rem;
-  min-height: 58rem;
+  /* min-height: 58rem; */
   /* align content inside the dashboard */
   display: flex;
   flex-direction: column;
@@ -97,27 +98,26 @@ p {
 
 .profile {
   margin: 0 2rem;
-  color: inherit;
 }
 .profile > .avatar {
-  width: 10rem;
-  border-style: solid dashed solid dashed;
-  border-radius: 50%;
+  width: 12.8rem;
+  border-style: solid dashed;
+  border-radius: 2rem;
 }
-
-.line-break {
+.line-blur {
   border: 0;
   height: 2px;
   width: 70%;
+}
+.line-blur.center {
+  justify-self: center;
   margin: 0 auto;
   background-image: linear-gradient(to right, #002b4000, #002b40ff, #002b4000);
 }
-.line-break-left {
-  border: 0;
-  height: 2px;
-  width: 100%;
+.line-blur.left {
+  justify-self: left;
   margin-bottom: 2rem;
-  background-image: linear-gradient(to right, #002b40ff, #002b4028, #002b4000);
+  background-image: linear-gradient(to right, #002b40ff, #002b4000);
 }
 
 .links {
@@ -130,21 +130,21 @@ p {
 /* End of Dashboard Section */
 
 /* Beginning of Content Section */
-.page-viewer {
+.page-container {
   /* place after the dashboard */
   flex: 2;
 
   display: grid;
   grid-auto-flow: column;
   /* count of columns is the max page count for all rows */
-  grid-template-columns: repeat(2, 100%);
+  grid-template-columns: repeat(3, 100%);
   /* count of rows is the amount of different main pages */
   grid-template-rows: repeat(4, 100%);
   grid-template-areas:
-    "home ."
-    ". about"
-    "projects ."
-    ". contact";
+    "home . ."
+    ". . about"
+    ". projects ."
+    ". . contact";
   /* set content to auto hide when overflowing. add nice scroll effect! */
   overflow: hidden;
   scroll-behavior: smooth;
@@ -153,6 +153,9 @@ p {
 /* obnoxious, but I'm out of ideas */
 #home-1 {
   grid-area: home;
+  /* force home to always be visible */
+  visibility: visible;
+  opacity: 1;
 }
 #about-1,
 #about-2 {
@@ -178,6 +181,7 @@ p {
   /* set default to be hidden, so when pages are selected they fade in */
   visibility: hidden;
   opacity: 0;
+  /* might need to be redone for browser support */
   transition: visibility 0ms, cubic-bezier(0.04, 0.69, 0.99, 0.65) 300ms,
     opacity 300ms;
 }
