--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ h2 {
 }
 h3 {
   font-size: 2.5rem;
-  font-weight: 400;
+  font-weight: 500;
 }
 h4 {
   font-size: 2rem;
@@ -226,7 +226,7 @@ p {
     rgba(255, 255, 255, 0.4),
     rgba(255, 255, 255, 0.8)
   );
-  border-radius: 2rem;
+  border-radius: 1rem;
   color: #002b40;
   padding: 2rem;
   margin: 1rem 0;
@@ -236,6 +236,7 @@ p {
 }
 
 .page-node h2,
+.page-node h3,
 .page-node h4 {
   /* since we want icons after headers, set them to
      place after the heading and align in the middle */
